--- a/src/main/docker/.env
+++ b/src/main/docker/.env
@@ -1,5 +1,5 @@
 DOCKER_TARGET_HOST=localhost
-RUNAS_USER=root
+DOCKER_TARGET_HOST_USER=root
 DOCKERVOLUMES_BASEPATH=/opt/dockervolumes
+DOCKER_TARGET_HOST_PORT=8080
 ENVIRONMENT_NAME=environmentnamemissing
-PORT=8080
