--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,8 +90,10 @@ deploytest:
     url: http://$DOCKER_TARGET_HOST:$DOCKER_TARGET_HOST_PORT/tuerauf/dashboard/
   only:
     - ecuberetreat
-  image: jonaskello/docker-and-compose:1.12.1-1.8.0
+  image: dsteinkopf/gitlab-ci-compose
   before_script:
+    - docker info
+    - docker-compose --version
     # Install ssh-agent if not already installed, it is required by Docker.
     # (change apt-get to yum if you use a CentOS-based image)
     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
@@ -100,13 +102,14 @@ deploytest:
     - eval $(ssh-agent -s)
 
     # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-    - ssh-add <(echo "$DOCKER_TARGET_HOST_SSH_PRIVATE_KEY")
+    - echo "$DOCKER_TARGET_HOST_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
 
     # For Docker builds disable host key checking. Be aware that by adding that
     # you are suspectible to man-in-the-middle attacks.
     # WARNING: Use this only with the Docker executor, if you use it with shell
     # you will overwrite your user's SSH config.
     - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     # In order to properly check the server's host key, assuming you created the
     # SSH_SERVER_HOSTKEYS variable previously, uncomment the following two lines
