--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,13 +122,12 @@ deploytest:
   script:
     # properties auf den docker host kopieren:
     - ssh $DOCKER_TARGET_HOST_USER@$DOCKER_TARGET_HOST mkdir -p $DOCKERVOLUMES_BASEPATH/tuerauf-$ENVIRONMENT_NAME/
-    - echo scp -v src/main/resources/application-$ENVIRONMENT_NAME.properties $DOCKER_TARGET_HOST_USER@$DOCKER_TARGET_HOST:$DOCKERVOLUMES_BASEPATH/tuerauf-$ENVIRONMENT_NAME/application-$ENVIRONMENT_NAME.properties
-    - scp -v src/main/resources/application-$ENVIRONMENT_NAME.properties $DOCKER_TARGET_HOST_USER@$DOCKER_TARGET_HOST:$DOCKERVOLUMES_BASEPATH/tuerauf-$ENVIRONMENT_NAME/application-$ENVIRONMENT_NAME.properties
+    - scp src/main/resources/application-$ENVIRONMENT_NAME.properties $DOCKER_TARGET_HOST_USER@$DOCKER_TARGET_HOST:$DOCKERVOLUMES_BASEPATH/tuerauf-$ENVIRONMENT_NAME/application-$ENVIRONMENT_NAME.properties
     - docker version
     - docker info
     - docker-compose --version
     # deploy:
-    - ( cd src/main/docker && docker-compose up -d --force-recreate )
+    - docker-compose -f src/main/docker/docker-compose.yml up -d --force-recreate
   after_script:
     - rm -rf $DOCKER_CERT_PATH
   variables:
