--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   mysql:
 
     # see https://hub.docker.com/_/mysql/
-    image: 'mysql:5.7'
+    image: mysql:5.7
     mem_limit: 300m
     environment:
       - MYSQL_ROOT_PASSWORD=verysecretdbpw
       # name of a database to be created on image startup
       - MYSQL_DATABASE=tuerauf
     ports:
-      - '3306:3306'
+      - 3306:3306
     restart: always
     volumes:
       #- /opt/dockervolumes/tuerauf-prod/var_lib_mysql:/var/lib/mysql
@@ -20,7 +20,7 @@ services:
 
   tuerauf:
 
-    image: 'dsteinkopf/tuerauf:${ENVIRONMENT_NAME}'
+    image: ${IMAGE_NAME}
     environment:
       - SPRING_CONFIG_LOCATION=/usr/local/tomcat/conf/application-${ENVIRONMENT_NAME}.properties
       - SPRING_PROFILES_ACTIVE=${ENVIRONMENT_NAME}
@@ -28,7 +28,7 @@ services:
           -Xmx512m
           -Xms64m
     links:
-      - 'mysql'
+      - mysql
     ports:
       - ${DOCKER_TARGET_HOST_PORT}:8080
     restart: always
