add docker push test (use gitlab.steinkopf.net - fix2)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ builddocker:
     # push to docker
     - docker version
     - echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-    - echo docker tag $IMAGE_NAME $IMAGE_NAME_WITH_TAG
+    - echo docker tag $IMAGE_NAME $DOCKER_REGISTRY$IMAGE_NAME_WITH_TAG
     - docker tag $IMAGE_NAME $DOCKER_REGISTRY$IMAGE_NAME_WITH_TAG
     - docker push $DOCKER_REGISTRY$IMAGE_NAME_WITH_TAG
     # todo cleanup, remove etc.
@@ -142,4 +142,4 @@ deploytest:
     DOCKER_TLS_VERIFY: "1"
     DOCKER_HOST: "tcp://$DOCKER_TARGET_HOST:2376"
     DOCKER_CERT_PATH: "certs"
-    DOCKER_REGISTRY: gitlab.steinkopf.net:8093/stk/tuerauf-backend-java:
+    DOCKER_REGISTRY: "gitlab.steinkopf.net:8093/stk/tuerauf-backend-java:"
